--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,17 @@
 spring.application.name=File-Uploading
 
-#spring.datasource.url = jdbc:h2:mem:testdb
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=password
-#spring.h2.console.enabled=true
-#
-#spring.servlet.multipart.max-file-size=200MB
-#spring.servlet.multipart.max-request-size=215MB
-
-
-# H2 Database Configuration
-spring.datasource.url=jdbc:h2:file:/path/to/your/h2/database
+spring.datasource.url = jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
+spring.h2.console.enabled=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
-# Maximum file upload sizes
 spring.servlet.multipart.max-file-size=200MB
 spring.servlet.multipart.max-request-size=215MB
 
-# File upload directory (optional if using H2 as the storage)
-file.upload-dir=/path/to/your/upload/directory
+
+
+
+
