--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,19 @@
+# Application name
 spring.application.name=File-Uploading
 
+# H2 Database Configuration
 spring.datasource.url = jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
+
+# Enable H2 console
 spring.h2.console.enabled=true
+
+# Hibernate and JPA Configuration
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 
+# Servlet Multipart File Upload Configuration
 spring.servlet.multipart.max-file-size=200MB
 spring.servlet.multipart.max-request-size=215MB
-
-
-
-
-
